changed the indentation of the paragraphs

--- a/index.html
+++ b/index.html
@@ -60,17 +60,15 @@
 
         <div class="mt-12 flex flex-col items-center">
             <h3 class="text-3xl sm:text-5xl">Sobre nós</h3>
-            <div class="w-4/5 sm:w-3/4 md:w-3/5 leading leading-relaxed text-lg sm:text-xl text-justify mt-4">
+            <div class="w-4/5 sm:w-3/4 md:w-3/5 leading-relaxed text-lg sm:text-xl text-justify mt-4">
                 <p class="indent-12">Na EcoShine, acreditamos que o cuidado com a beleza pode andar de mãos dadas
-                    com o respeito à natureza.</p>
-
-                <p class="indent-12">Nosso propósito é oferecer produtos capilares que nutrem e protegem os fios,
-                    utilizando fórmulas ecológicas, seguras e livres de agressões ao meio ambiente.</p>
+                    com o respeito à natureza. Nosso propósito é oferecer produtos capilares que nutrem e protegem os
+                    fios,
+                    utilizando fórmulas ecológicas, seguras e livres de agressões ao meio ambiente.
 
                 <p class="indent-12">Cada detalhe é pensado com carinho — desde os ingredientes selecionados até as
-                    embalagens sustentáveis — para que você possa se cuidar de forma consciente e responsável.</p>
-
-                <p class="indent-12">Mais do que cosméticos, queremos inspirar uma rotina de autocuidado que reflita
+                    embalagens sustentáveis — para que você possa se cuidar de forma consciente e responsável. Mais do
+                    que cosméticos, queremos inspirar uma rotina de autocuidado que reflita
                     equilíbrio, bem-estar e respeito ao planeta. Porque quando você brilha, a natureza também
                     brilha!</p>
             </div>
@@ -78,11 +76,10 @@
 
         <div class="mt-12 flex flex-col items-center">
             <h3 class="text-3xl sm:text-5xl">Nossa missão</h3>
-            <div class="w-4/5 sm:w-3/4 md:w-3/5 leading leading-relaxed text-lg sm:text-xl text-justify mt-4">
-                <p class="indent-12">Nossa missão é oferecer cuidados capilares de alta qualidade pormeio de óleos 100%
-                    naturais, sustentáveis e livre sde crueldade, promovendo a beleza saudável enquanto respeitamos o
-                    meio
-                    ambiente e valorizando práticas éticas em toda a cadeia produtiva.</p>
+            <div class="w-4/5 sm:w-3/4 md:w-3/5 leading-relaxed text-lg sm:text-xl text-justify mt-4">
+                <p class="indent-12">Nossa missão é oferecer cuidados capilares de alta qualidade por meio de óleos 100%
+                    naturais, sustentáveis e livres de crueldade, promovendo a beleza saudável enquanto respeitamos
+                    o meio ambiente e valorizando práticas éticas em toda a cadeia produtiva.</p>
             </div>
         </div>
 
