--- a/products.html
+++ b/products.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="output.css">
     <script src="https://kit.fontawesome.com/b072edff8a.js" crossorigin="anonymous"></script>
     <title>EcoShine</title>
+    <link rel="icon" type="image/x-icon" href="/images/logo.jpg">
 </head>
 
 <body class="font-sans bg-[#f6e9d2] min-h-screen flex flex-col" id="body">
