--- a/products.html
+++ b/products.html
@@ -59,12 +59,41 @@
     <main class="flex-1 flex flex-col items-center mt-4">
         <h3 class="text-xl sm:text-3xl mb-4 sm:mb-8">Conheça nossas Fragâncias</h3>
         <div class="flex flex-wrap p-4 items-center justify-center gap-8">
-            <img src="images/vanilla.jpeg"
-                class="w-2/3 sm:w-1/2 md:w-[28%] shadow-md rounded-3xl hover:scale-110 transition-all">
-            <img src="images/baby.jpeg"
-                class="w-2/3 sm:w-1/2 md:w-[28%] shadow-md rounded-3xl hover:scale-110 transition-all">
-            <img src="images/tutti_frutti.jpeg"
-                class="w-2/3 sm:w-1/2 md:w-[28%] shadow-md rounded-3xl hover:scale-110 transition-all">
+            <div
+                class="w-[90%] sm:w-2/3 md:w-[30%] bg-white rounded-3xl p-2 hover:scale-105 transition-all shadow-md flex">
+                <img src="images/vanilla.jpg" class="w-1/2 rounded-3xl">
+
+                <div class="flex flex-col items-center w-full px-2">
+                    <h1 class="text-center text-lg sm:text-xl md:text-3xl pb-4 font-semibold">Black Vanilla</h1>
+                    <p>Perfume acolhedor e reconfortante, com notas cálidas e levemente adocicadas.</p>
+                </div>
+
+            </div>
+
+            <div
+                class="w-[90%] sm:w-2/3 md:w-[30%] bg-white rounded-3xl p-2 hover:scale-105 transition-all shadow-md flex">
+                <img src="images/baby.jpg" class="w-1/2 rounded-3xl">
+
+                <div class="flex flex-col items-center w-full px-2">
+                    <h1 class="text-center text-lg sm:text-xl md:text-3xl pb-4 font-semibold">Bebê</h1>
+                    <p>Aroma delicado e suave, que remete à frescura e limpeza característicos de produtos infantis.</p>
+                </div>
+
+            </div>
+
+            <div
+                class="w-[90%] sm:w-2/3 md:w-[30%] bg-white rounded-3xl p-2 hover:scale-105 transition-all shadow-md flex">
+                <img src="images/tutti_frutti.jpg" class="w-1/2 rounded-3xl">
+
+                <div class="flex flex-col items-center w-full px-2">
+                    <h1 class="text-center text-lg sm:text-xl md:text-3xl pb-4 font-semibold">Tutti Frutti</h1>
+                    <p>Composição vibrante, que combina notas frutais frescas com toques levemente cítricos.</p>
+                </div>
+
+            </div>
+
+
+
         </div>
         <div class="bg-white mt-8 py-4 sm:py-8 px-8 sm:px-16 rounded-3xl flex flex-col items-center">
             <h3 class="text-xl sm:text-3xl mb-4 sm:mb-8">Reserve o seu!</h3>
