Solved justify center on clients tab

--- a/clients.html
+++ b/clients.html
@@ -80,7 +80,7 @@
             </svg>
             <span class="sr-only">Loading...</span>
         </div>
-        <div id="reserved_products" class="flex flex-wrap gap-8">
+        <div id="reserved_products" class="flex flex-wrap gap-8 items-center justify-center">
 
         </div>
     </main>
