Added price to products

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
                     que cosméticos, queremos inspirar uma rotina de autocuidado que reflita
                     equilíbrio, bem-estar e respeito ao planeta. Porque quando você brilha, a natureza também
                     brilha!</p>
+
+                <p class="indent-12">Fazemos parte do segundo ano do ensino médio, na <b>escola Sagrado Coração de Jesus
+                        - Garibaldi</b> e estaremos vendendo no <b> dia 18/10</b> em nossa colégio. Venha nos conhecer
+                    pessoalmente para experimentar nossos produtos!
+                </p>
             </div>
         </div>
 
