--- a/products.html
+++ b/products.html
@@ -64,7 +64,8 @@
                 <img src="images/vanilla.jpg" class="w-1/2 rounded-3xl">
 
                 <div class="flex flex-col items-center w-full px-2">
-                    <h1 class="text-center text-lg sm:text-xl md:text-3xl pb-4 font-semibold">Black Vanilla</h1>
+                    <h1 class="text-center text-lg sm:text-xl md:text-3xl mb-2 font-semibold">Black Vanilla</h1>
+                    <h3 class="text-lg sm:text-xl md:text-2xl mb-4">R$ 20,00</h3>
                     <p>Perfume acolhedor e reconfortante, com notas cálidas e levemente adocicadas.</p>
                 </div>
 
@@ -75,7 +76,8 @@
                 <img src="images/baby.jpg" class="w-1/2 rounded-3xl">
 
                 <div class="flex flex-col items-center w-full px-2">
-                    <h1 class="text-center text-lg sm:text-xl md:text-3xl pb-4 font-semibold">Bebê</h1>
+                    <h1 class="text-center text-lg sm:text-xl md:text-3xl mb-2 font-semibold">Bebê</h1>
+                    <h3 class="text-lg sm:text-xl md:text-2xl mb-4">R$ 20,00</h3>
                     <p>Aroma delicado e suave, que remete à frescura e limpeza característicos de produtos infantis.</p>
                 </div>
 
@@ -86,7 +88,8 @@
                 <img src="images/tutti_frutti.jpg" class="w-1/2 rounded-3xl">
 
                 <div class="flex flex-col items-center w-full px-2">
-                    <h1 class="text-center text-lg sm:text-xl md:text-3xl pb-4 font-semibold">Tutti Frutti</h1>
+                    <h1 class="text-center text-lg sm:text-xl md:text-3xl mb-2 font-semibold">Tutti Frutti</h1>
+                    <h3 class="text-lg sm:text-xl md:text-2xl mb-4">R$ 20,00</h3>
                     <p>Composição vibrante, que combina notas frutais frescas com toques levemente cítricos.</p>
                 </div>
 
